# Producer-Amplifier

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NPA-PRD-v05.docx  NPA_MasterBudget_v1.xlsx  README.md  VFX-Provisor-Planning-v1.docx  npa-integration.js  pyproject.toml  requirements.txt  ruff.toml  script-breakdown-ui.html
.github/workflows/: ci.yml
.sba_cache/: 5df20120eaafda24.json  86d03f9f365a8892.json  c82b77dd4256587e.json  f4537c19da790466.json
corpus/: capture_checklist.md  cost_rules.md  vfx_taxonomy.md
corpus/gold_examples/: control_room_briefing.md  death_star_corridor.md  highway_chase.md  rebel_base_command.md  tatooine_desert.md  warehouse_explosion.md
docs/plans/: 2026-02-14-script-breakdown-assistant.md  2026-02-14-ui-production-bible-design.md  2026-02-16-p1-p4-implementation.md  2026-02-16-p1-p4-vertical-slice-design.md
src/sba/: __init__.py  __main__.py  app.py  cache.py  cli.py  config.py
src/sba/budget/: __init__.py  excel_reader.py  excel_writer.py
src/sba/chat/: __init__.py  model_router.py  router.py  system_prompt.py  tools.py
src/sba/llm/: __init__.py  claude_client.py  generator.py  generator.py.backup  prompts.py
src/sba/output/: __init__.py  export_csv.py  export_html.py  export_xlsx.py  schema.py  validate.py
src/sba/parsing/: __init__.py  character_parser.py  docx_extractor.py  fdx_extractor.py  models.py  pdf_extractor.py  pipeline.py  preprocessor.py  scene_parser.py  text_extractor.py  vfx_mapper.py  vfx_scanner.py
src/sba/rag/: __init__.py  corpus_builder.py  embedder.py  retriever.py  vector_store.py
src/sba/voice/: __init__.py  stt.py  tts.py
tests/: test_character_parser.py  test_corpus_builder.py  test_export_csv.py  test_export_html.py  test_parsing_pipeline.py  test_preprocessor.py  test_scene_parser.py  test_schema.py  test_smoke.py  test_staged_analysis.py  test_validate.py  test_vfx_mapper.py  test_vfx_scanner.py
tests/fixtures/: test_excerpt.txt
